add jobId
- on create and add filter
- add job overview
